--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 </head>
 <body>
     <div class = "title">Etch-a-Sketch</div>
+    <div class = "header">
+        <h6>Select grid size: </h6>
+        <button id = "popup">Submit</button>
+    </div>
     <div class = "container"></div>
+    <div class = "footer">
+        <button>Black</button>
+        <button>Random</button>
+        <button>Reset</button>
+    </div>
 </body>
 </html>
