Add id values to buttons

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </div>
     <div class = "container"></div>
     <div class = "footer">
-        <button>Black</button>
-        <button>Random</button>
-        <button>Reset</button>
+        <button id = "black">Black</button>
+        <button id = "random">Random</button>
+        <button id = "reset">Reset</button>
     </div>
 </body>
 </html>
