Add function to allow custom board size

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class = "title">Etch-a-Sketch</div>
     <div class = "header">
         <h6>Select grid size: </h6>
-        <button id = "popup">Submit</button>
+        <button id = "popup">Click here</button>
     </div>
+    <p id = "message"></p>
     <div class = "container"></div>
     <div class = "footer">
         <button id = "black">Black</button>
