--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <p id = "message"></p>
     <div class = "container"></div>
     <div class = "footer">
-        <button id = "black">Black</button>
-        <button id = "random">Random</button>
+        <button id = "black" onclick = "setColor('black')">Black</button>
+        <button id = "random" onclick = "setColor('random')">Random</button>
         <button id = "reset">Reset</button>
     </div>
 </body>
