Add drawing control function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button id = "popup">Click here</button>
     </div>
     <p id = "message"></p>
+    <p id = "draw">Click anywhere to start drawing.</p>
     <div class = "container"></div>
     <div class = "footer">
         <button id = "black" onclick = "setColor('black')">Black</button>
